--- a/code/Models.Rmd
+++ b/code/Models.Rmd
@@ -84,12 +84,19 @@ par(mfrow=c(1,1))
 ```{r}
 
 # Seasonal naive on original data
-SNAIVE_seas <- snaive(ts_load_daily, h=12)
+SNAIVE_seas <- snaive(ts_load_daily, h=60)
 plot(SNAIVE_seas)
 
 checkresiduals(SNAIVE_seas)
 
 ```
 
-
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+## Write into Excel file
+```{r}
+
+write.csv(SNAIVE_seas, file = "seasonal_naive_forecast.csv")
+
+```
+
