--- a/code/Model_Zuocheng.Rmd
+++ b/code/Model_Zuocheng.Rmd
@@ -24,6 +24,7 @@ library(smooth)
 library(zoo)
 library(kableExtra)
 library(timeDate)
+library(glmnet)
 ```
 
 
@@ -84,9 +85,6 @@ ts_daily_test <- window(ts_load_daily, start=c(2010,1))
 
 
 
-
-
-
 ## Initial Plots & Time Series
 ```{r}
 
@@ -129,6 +127,7 @@ ggplot(daily_data, aes(x = load_daily)) +
 #fit_arima <- auto.arima(ts_daily_train[,1],lambda = TRUE)
 
 #print(fit_arima)
+
 daily_data$date <- as.Date(daily_data$date)
 
 us_years <- as.numeric(format(daily_data$date, "%Y"))
@@ -154,91 +153,9 @@ daily_data <- daily_data %>%
 
 ```
 
-
-### Search for parameters
-```{r}
-grid_search_nnetar_safe <- function(train_data, test_data, 
-                                    p_values = 1:2, 
-                                    P_values = 0:1, 
-                                    K_values = list(c(1,1), c(2,2), c(3,3)), 
-                                    h = 60,
-                                    repeats = 20) {
-  
-  results <- list()
-  counter <- 1
-  
-  for (p in p_values) {
-    for (P in P_values) {
-      for (K in K_values) {
-        try({
-          # 构建 xreg
-          xreg_train <- cbind(fourier(train_data[,1], K = K), train_data[,5:8])
-          xreg_test_raw <- cbind(fourier(test_data[,1], K = K, h = h), test_data[1:h, 5:8])
-          
-          # 获取训练时的列名
-          col_order <- colnames(xreg_train)
-          
-          # 强制统一测试集列名和顺序
-          colnames(xreg_test_raw) <- colnames(xreg_train)  # 先改名
-          xreg_test <- xreg_test_raw[, col_order]          # 再按顺序排列
-
-          # 建模
-          model <- nnetar(train_data[,1], p = p, P = P, xreg = xreg_train, repeats = repeats)
-          
-          # 预测
-          forecast_result <- forecast(model, h = h, xreg = xreg_test)
-          
-          # 评估
-          acc <- accuracy(forecast_result$mean, test_data[1:h, 1])
-          
-          # 存结果
-          results[[counter]] <- tibble(
-            p = p,
-            P = P,
-            K1 = K[1],
-            K2 = K[2],
-            RMSE = acc["Test set", "RMSE"],
-            MAPE = acc["Test set", "MAPE"]
-          )
-          
-          counter <- counter + 1
-          
-        }, silent = TRUE)  # 有错跳过
-      }
-    }
-  }
-  
-  # 汇总结果
-  results_df <- bind_rows(results)
-  results_df <- arrange(results_df, RMSE)
-  
-  return(results_df)
-}
-```
-
-
-```{r}
-result_df <- grid_search_nnetar_safe(
-  train_data = ts_daily_train,
-  test_data = ts_daily_test,
-  p_values = 1:3,
-  P_values = 0:1,
-  K_values = list(c(1,1), c(2,2), c(3,3)),
-  h = 60,
-  repeats = 20
-)
-
-print(result_df)
-
-
-```
-
-
 ## NN model with data features
 
 ```{r NNETAR, echo=TRUE, message=FALSE, warning=FALSE}
-#You can play with the different values for p and P, you can also use xreg with Fourier term to model the multiple seasonality
-
 
 ts_load_daily <- msts(daily_data[-1], 
                            seasonal.periods =c(7,365.25),
@@ -252,14 +169,14 @@ ts_daily_test <- window(ts_load_daily, start=c(2010,1))
 NN_fit <- nnetar(ts_daily_train[,1],
                  p=1,
                  P=1,
-                 xreg=cbind(fourier(ts_daily_train[,1], K = c(1,1)),ts_daily_train[,5:8]))
+                 xreg=cbind(fourier(ts_daily_train[,1], K = c(1,1)),ts_daily_train[,4:8]))
 
+
+h <- 360 + 59
 
 NN_for <- forecast(NN_fit, 
-                   h = 60,
-                   xreg=cbind(fourier(ts_daily_test[,1], K = c(1,1),h=60),ts_daily_test[1:60,5:8]))
-
-
+                   h = h,
+                   xreg=cbind(fourier(ts_daily_train[,1], K = c(1,1),h=h),ts_daily_train[1:h,4:8]))
 
 
 #Plot foresting results
@@ -277,7 +194,7 @@ NN_scores <- accuracy(NN_for$mean,ts_daily_test[,1])
 
 print(NN_scores)
 
-output <- NN_for$mean[1:59]
+output <- NN_for$mean[h-360:h]
 
 
 template <- read_excel("../result/submission_template.xlsx")
@@ -286,7 +203,10 @@ template$load[1:length(output)] <- as.numeric(output)
 
 write.csv(template, file = "../result/NN_with_features V4.csv",row.names = FALSE)
 
+
 ```
+
+
 
 
 
